# anki-automation

./: README.md  anki-automation.py  pdf_to_images.py  pyproject.toml
