[project]
name = "anki-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "Ahmed Gouda",email = "ahmedmosad405@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdf2image (>=1.17.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
